[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/rpc_example_2/Player.gd" type="Script" id=1]

[node name="Player" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Id" type="LineEdit" parent="."]
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="Historic" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Methods" type="VBoxContainer" parent="Historic"]
margin_right = 94.0
margin_bottom = 572.0

[node name="RemoteLabel" type="Label" parent="Historic/Methods"]
margin_right = 94.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    remote func"

[node name="RemoteTimer" type="Timer" parent="Historic/Methods"]

[node name="MasterLabel" type="Label" parent="Historic/Methods"]
margin_top = 192.0
margin_right = 94.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    master func"

[node name="MasterTimer" type="Timer" parent="Historic/Methods"]

[node name="PuppetLabel" type="Label" parent="Historic/Methods"]
margin_top = 384.0
margin_right = 94.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    puppet func"

[node name="PuppetTimer" type="Timer" parent="Historic/Methods"]

[node name="Senders" type="VBoxContainer" parent="Historic"]
margin_left = 98.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3

[node name="RemoteSender" type="Label" parent="Historic/Senders"]
margin_right = 926.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    (null)"

[node name="MasterSender" type="Label" parent="Historic/Senders"]
margin_top = 192.0
margin_right = 926.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    (null)"

[node name="PuppetSender" type="Label" parent="Historic/Senders"]
margin_top = 384.0
margin_right = 926.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    (null)"

[connection signal="timeout" from="Historic/Methods/RemoteTimer" to="." method="_on_RemoteTimer_timeout"]
[connection signal="timeout" from="Historic/Methods/MasterTimer" to="." method="_on_MasterTimer_timeout"]
[connection signal="timeout" from="Historic/Methods/PuppetTimer" to="." method="_on_PuppetTimer_timeout"]
